--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -94,6 +94,7 @@ services:
     environment:
       - SSL_TYPE=letsencrypt
       - SSL_CERT_PATH=/etc/letsencrypt/acme.json
+      - ENABLE_OPENDKIM=1
       - ENABLE_POP3=1
       - ENABLE_PROXY_PROTOCOL=1
       - SMTP_ONLY=0
