--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -101,6 +101,7 @@ services:
       - ENABLE_PROXY_PROTOCOL=1
       - SMTP_ONLY=0
       - PERMIT_DOCKER=network
+      - ENABLE_AMAVIS=0
       - POSTFIX_MAILBOX_SIZE_LIMIT=0
       - DOVECOT_TRUSTED_NETWORKS=${TRAEFIK_IP}
       - PUBLIC_IP=${PUBLIC_IP}
